@@ -15,6 +15,8 @@ RELEASE X.X.X - XXX
     - Fix the -n option when used with VariantDir(duplicate=1)
       and the variant directory doesn't already exist.
 
+    - Fix scanning of Unicode files for both UTF-16 endian flavors.
+
 
 
 RELEASE 1.2.0.d20090223 - Mon, 23 Feb 2009 08:41:06 -0800
